trying to fix font colors on iOS

--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@
   background: rgba(0, 0, 0, 0.5);
   border: #000 solid 3px;
   border-radius: 25px;
+  color:#fff
 }
 
 .logo {
